--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,4 +29,15 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+
+    #docker build and upload
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v6
+      with:
+          image: mahadevaswamyn740/githubaction
+          tags: latest
+          registry: docker.io
+          dockerfile: Dockerfile.ci
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       
